p2ws_package/Devpp2ws-Package/objects/ROP_Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to the customer that this enrollment belong to</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ROP Enrollment</relationshipLabel>
        <relationshipName>ROP_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <description>Area code of phone number</description>
        <label>Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Country code of phone number</description>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Crew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The crew that created this ROP Enrollment record or the air purser that was responsible for the In-flight App</description>
        <label>Created By Crew</label>
        <referenceTo>Crew__c</referenceTo>
        <relationshipLabel>ROP Enrollments</relationshipLabel>
        <relationshipName>ROP_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the customer</description>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <description>The date that this ROP Enrollment occured</description>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Status__c</fullName>
        <description>Date of birth of the customer enrolling</description>
        <formula>IF( TEXT(Status__c) == &apos;Enroll&apos;, &apos;Enroll&apos;, IF(AND(TEXT(Status__c) == &apos;Void&apos;,  ROP_Number__r.Name == NULL) ,&apos;Void Before Sync&apos;, IF(AND(TEXT(Status__c) == &apos;Void&apos;,  ROP_Number__r.Name != NULL),&apos;Void After Sync&apos;, &apos;&apos; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Type__c</fullName>
        <description>The type of enrollment whether it is via TG Web Service or manually enrolled</description>
        <label>Enrollment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web Service</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>External Id of this ROP Enrollment which is ROP Number + PaxKey</description>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the customer</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlightId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Flight that originated this ROP Enrollment</description>
        <label>Flight</label>
        <referenceTo>Flight__c</referenceTo>
        <relationshipLabel>ROP Enrollments</relationshipLabel>
        <relationshipName>ROP_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of the customer</description>
        <label>Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Reason__c</fullName>
        <description>The error from Web Service Callout</description>
        <label>Integration Error Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate whether this ROP Enrollment encountered error during Web Service Callout</description>
        <label>Integration Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the customer</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate wheter this ROP Enrollment must be done manually because the salutation cannot be extracted from the customer&apos;s name</description>
        <label>Manual Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MembershipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to the membership object</description>
        <label>Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>ROP Enrollment</relationshipLabel>
        <relationshipName>ROP_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <description>Nationality of the customer in 3 alphabets</description>
        <label>Nationality</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PassengerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Passenger that enrolled</description>
        <label>Passenger</label>
        <referenceTo>Passenger__c</referenceTo>
        <relationshipLabel>ROP Enrollment</relationshipLabel>
        <relationshipName>ROP_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaxKey__c</fullName>
        <description>PaxKey of the passenger</description>
        <externalId>true</externalId>
        <label>PaxKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Phone number of the customer</description>
        <label>Phone Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <description>Phone type of the customer wheter it is business, home or mobile phone</description>
        <label>Phone Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Number_F__c</fullName>
        <description>The text version of the ROP Number</description>
        <formula>ROP_Number__r.ROP_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROP Number Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to the assigned ROP Number record</description>
        <label>ROP Number</label>
        <referenceTo>ROP_Number_Inventory__c</referenceTo>
        <relationshipLabel>ROP Enrollments</relationshipLabel>
        <relationshipName>ROP_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_By_Crew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The crew that actually reported this ROP Enrollment</description>
        <label>Reported By Crew</label>
        <referenceTo>Crew__c</referenceTo>
        <relationshipLabel>ROP Enrollments (Reported By Crew)</relationshipLabel>
        <relationshipName>ROP_Enrollments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_from_THAI__c</fullName>
        <description>Response from Web Service Callout to TG</description>
        <label>Response from THAI</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>Salutation of the customer</description>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the ROP Enrollment whether</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enroll</fullName>
                    <default>true</default>
                    <label>Enroll</label>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ROP Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Integration_Error__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ROP Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ROP Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>